tests/NormalTests/paczka1/fuzzy1/68931741.err
Error in line 3: C5w2mYX A475 22,3
Error in line 4: C5w2mYX A175 55,7
Error in line 5: C5w2mYX A71 25,1
Error in line 8: unQnGUnb A475 13,9
Error in line 7: C5w2mYX A475 0,3
Error in line 10: unQnGUnb A71 79,3
Error in line 11: C5w2mYX A71 63,5
Error in line 20: w6h A730 43,0
Error in line 21: w6h A175 57,2
Error in line 27: zoV A730 13,73
Error in line 26: zoV A475 5,0
Error in line 29: zoV A730 0,9
